# cairn

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  clippy.toml  deny.toml  justfile  lefthook.yml
.config/: nextest.toml
.github/: dependabot.yml  pull_request_template.md
.github/actions/setup-rust/: action.yml
.github/workflows/: auto-rerun-flaky.yml  auto-update-prs.yml  ci.yml  claude-review.yml  claude.yml  coverage.yml  fuzz-nightly.yml  heavy.yml  mutants-scheduled.yml  security-daily.yml  sync-template.yml
audit/: README.md  design.md  devops.md  diagnostics.md  security.md
crates/cairn-app/: Cargo.toml
crates/cairn-app/src/: lib.rs
crates/cairn-cli/: Cargo.toml
crates/cairn-cli/src/: main.rs
crates/cairn-cli/tests/: cli.rs
crates/cairn-contract/: Cargo.toml
crates/cairn-contract/bindings/: AnswerEvent.ts  AskRequest.ts  Command.ts  CommandResponse.ts  PluginCapability.ts  PluginSlot.ts  PluginSummary.ts  PluginWidget.ts  Query.ts  QueryResponse.ts  pluginValues.ts
crates/cairn-contract/src/: lib.rs
crates/cairn-contract/tests/: codegen.rs
crates/cairn-daemon/: Cargo.toml
crates/cairn-daemon/src/: auth.rs  config.rs  lib.rs  main.rs  mcp.rs
crates/cairn-daemon/tests/: ask.rs  auth.rs  cors.rs  events.rs  http.rs  logging.rs  mcp.rs  watch.rs  ws.rs
crates/cairn-domain/: Cargo.toml
crates/cairn-domain/src/: block.rs  crdt.rs  graph.rs  lib.rs  link.rs  note.rs
crates/cairn-domain/tests/: convergence.rs
crates/cairn-infra/: Cargo.toml
crates/cairn-infra/src/: collab.rs  git.rs  index.rs  lib.rs  localfs.rs  notify_watcher.rs  plugin_hash.rs  plugin_host.rs  sandbox.rs  seams.rs  tantivy_index.rs
crates/cairn-infra/src/tau/: client.rs  config.rs  mod.rs  process.rs  runtime.rs  supervisor.rs  wire.rs
crates/cairn-infra/tests/: notify_watcher.rs  tau_lifecycle.rs  tau_sidecar.rs
crates/cairn-mcp/: Cargo.toml
crates/cairn-mcp/src/: lib.rs
crates/cairn-plugin-example/: Cargo.toml
crates/cairn-plugin-example/src/: main.rs
crates/cairn-plugin-example/tests/: host.rs
crates/cairn-plugin-protocol/: Cargo.toml
crates/cairn-plugin-protocol/src/: lib.rs
crates/cairn-plugin-sdk/: Cargo.toml
crates/cairn-plugin-sdk/src/: lib.rs
crates/cairn-ports/: Cargo.toml
crates/cairn-ports/src/: lib.rs
crates/cairn-sandbox-win/: Cargo.toml
crates/cairn-sandbox-win/src/: main.rs  win.rs
crates/cairn-sandbox-win/tests/: confinement.rs
crates/cairn-service/: Cargo.toml
crates/cairn-service/src/: lib.rs
crates/cairn-startup/: Cargo.toml
crates/cairn-startup/src/: lib.rs
docs/decisions/: 0001-walking-skeleton.md  0002-transport.md  0003-file-watcher.md  0004-daemon-cors.md  0005-in-process-watcher.md  0006-on-disk-persistence.md  0007-note-cache.md  0008-plugin-host.md  0009-ci-automation.md  0010-daemon-auth.md  0011-crdt-collaboration-model.md  0011-mcp-server.md  0011-tau-sidecar-supervision.md  0012-external-edit-sync-hardening.md
docs/handoffs/: 2026-06-01-ui-session-handoff.md  2026-06-09-ui-engine-upgrade.md
docs/superpowers/plans/: 2026-06-01-cairn-transport.md  2026-06-01-cairn-walking-skeleton.md  2026-06-01-daemon-cors.md  2026-06-01-file-watcher.md  2026-06-01-list-graph-queries.md  2026-06-01-rename.md  2026-06-01-tags.md  2026-06-01-tantivy-search.md  2026-06-02-in-process-watcher.md  2026-06-02-note-cache.md  2026-06-02-on-disk-persistence-phase1.md  2026-06-09-plugin-host-slice1.md  2026-06-09-plugin-host-slice3a.md  2026-06-10-ci-automation.md  2026-06-10-note-history.md  2026-06-10-plugin-cairn-events.md  2026-06-10-plugin-host-deletenote.md  2026-06-10-plugin-host-slice3b.md  2026-06-10-plugin-sdk.md  2026-06-10-plugin-timeout-config.md  2026-06-10-plugin-timeout.md  2026-06-11-cairn-plugin-trust.md  2026-06-11-cairn-structured-logging.md  2026-06-11-cli-ux-polish.md  2026-06-11-content-hash-persistence.md  2026-06-11-daemon-auth.md  2026-06-11-devops-schedules-and-sync.md  2026-06-11-domain-and-startup-structure.md  2026-06-11-error-fidelity.md  2026-06-11-error-typing-and-drop-observability.md  2026-06-11-heavy-tier-release.md  2026-06-11-just-convergence.md  2026-06-11-mutex-poisoning.md  2026-06-11-notepath-rce-hardening.md  2026-06-11-symlink-traversal-containment.md  2026-06-11-ws-origin-validation.md  2026-06-12-plugin-content-hashing.md  2026-06-13-plugin-macos-sandbox.md  2026-06-14-cairn-ask-engine-seam.md  2026-06-14-capability-derived-sandbox-profiles.md  (+7 more)
docs/superpowers/specs/: 2026-06-01-cairn-engine-design.md  2026-06-01-cairn-transport-design.md  2026-06-01-daemon-cors-design.md  2026-06-01-file-watcher-design.md  2026-06-01-list-graph-queries-design.md  2026-06-01-rename-design.md  2026-06-01-tags-design.md  2026-06-01-tantivy-search-design.md  2026-06-02-in-process-watcher-design.md  2026-06-02-note-cache-design.md  2026-06-02-on-disk-persistence-phase1-design.md  2026-06-09-plugin-host-slice1-design.md  2026-06-09-plugin-host-slice3a-design.md  2026-06-10-ci-automation-design.md  2026-06-10-note-history-design.md  2026-06-10-plugin-cairn-events-design.md  2026-06-10-plugin-host-deletenote-design.md  2026-06-10-plugin-host-slice3b-design.md  2026-06-10-plugin-sdk-design.md  2026-06-10-plugin-timeout-config-design.md  2026-06-10-plugin-timeout-design.md  2026-06-11-cairn-plugin-trust-design.md  2026-06-11-cairn-structured-logging-design.md  2026-06-11-content-hash-persistence-design.md  2026-06-11-daemon-auth-design.md  2026-06-12-plugin-content-hashing-design.md  2026-06-13-plugin-macos-sandbox-design.md  2026-06-14-cairn-ask-engine-seam-design.md  2026-06-14-capability-derived-sandbox-profiles-design.md  2026-06-14-plugin-capability-vocabulary-approval-design.md  2026-06-14-plugin-linux-sandbox-design.md  2026-06-14-plugin-windows-sandbox-design.md  2026-06-14-tau-augmented-answer-design.md  2026-06-14-tier3-plugin-contract-design.md  2026-06-16-cairn-mcp-server-design.md  2026-06-16-crdt-collaboration-design.md  2026-06-16-tau-daemon-sidecar-design.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: note_path.rs  plugin_manifest.rs
