[workspace]
resolver = "2"
members = [
    "crates/cairn-domain",
    "crates/cairn-ports",
    "crates/cairn-infra",
]

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/tau-rs/cairn"
rust-version = "1.85"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
ts-rs = "10"
git2 = "0.19"
clap = { version = "4", features = ["derive"] }
tempfile = "3"
assert_cmd = "2"
predicates = "3"
