[workspace]
resolver = "2"
members = [
    "crates/cairn-domain",
    "crates/cairn-ports",
    "crates/cairn-infra",
    "crates/cairn-app",
    "crates/cairn-contract",
    "crates/cairn-service",
    "crates/cairn-cli",
    "crates/cairn-daemon",
]

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/tau-rs/cairn"
rust-version = "1.88"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
ts-rs = "10"
git2 = "0.20"
tantivy = "0.26"
clap = { version = "4", features = ["derive"] }
tempfile = "3"
assert_cmd = "2"
predicates = "3"
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
tokio-tungstenite = "0.29"
futures-util = "0.3"
notify = "6"
notify-debouncer-full = "0.7"
tower-http = { version = "0.6", features = ["cors"] }
toml = "0.8"
