[package]
name = "cairn-app"
version = "0.0.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
cairn-domain = { path = "../cairn-domain" }
cairn-ports = { path = "../cairn-ports" }

[dev-dependencies]
cairn-infra = { path = "../cairn-infra" }
tempfile = { workspace = true }

[lints]
workspace = true
