[package]
name = "cairn-app"
version = "0.0.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
cairn-domain = { path = "../cairn-domain" }
cairn-ports = { path = "../cairn-ports" }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
cairn-infra = { path = "../cairn-infra" }
tempfile = { workspace = true }
tracing-test = { workspace = true }

[lints]
workspace = true
