[package]
name = "cairn-cli"
version = "0.0.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "cairn"
path = "src/main.rs"

[dependencies]
cairn-domain = { path = "../cairn-domain" }
cairn-ports = { path = "../cairn-ports" }
cairn-infra = { path = "../cairn-infra" }
cairn-app = { path = "../cairn-app" }
cairn-startup = { path = "../cairn-startup" }
cairn-contract = { path = "../cairn-contract" }
cairn-service = { path = "../cairn-service" }
clap = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
predicates = { workspace = true }
tempfile = { workspace = true }

[lints]
workspace = true
