[package]
name = "cairn-daemon"
version = "0.0.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "cairn-daemon"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[dependencies]
cairn-domain = { path = "../cairn-domain" }
cairn-ports = { path = "../cairn-ports" }
cairn-app = { path = "../cairn-app" }
cairn-startup = { path = "../cairn-startup" }
cairn-infra = { path = "../cairn-infra" }
cairn-contract = { path = "../cairn-contract" }
cairn-service = { path = "../cairn-service" }
axum = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
tower-http = { workspace = true }
toml = { workspace = true }
getrandom = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
tower = { workspace = true }
http-body-util = { workspace = true }
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }
tempfile = { workspace = true }
tracing-test = { workspace = true }

[lints]
workspace = true
