[package]
name = "cairn-infra"
version = "0.0.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
cairn-domain = { path = "../cairn-domain" }
cairn-ports = { path = "../cairn-ports" }
cairn-plugin-protocol = { path = "../cairn-plugin-protocol" }
git2 = { workspace = true }
notify = { workspace = true }
tantivy = { workspace = true }
notify-debouncer-full = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
sha2 = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
