[package]
name = "cairn-plugin-example"
version = "0.0.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
cairn-plugin-protocol = { path = "../cairn-plugin-protocol" }
serde_json = { workspace = true }

[dev-dependencies]
cairn-infra = { path = "../cairn-infra" }
cairn-ports = { path = "../cairn-ports" }
tempfile = { workspace = true }

[lints]
workspace = true
