[package]
name = "cairn-ports"
version = "0.0.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
cairn-domain = { path = "../cairn-domain" }
cairn-plugin-protocol = { path = "../cairn-plugin-protocol" }
thiserror = { workspace = true }
serde_json = { workspace = true }

[lints]
workspace = true
