[package]
name = "cairn-service"
version = "0.0.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
cairn-domain = { path = "../cairn-domain" }
cairn-ports = { path = "../cairn-ports" }
cairn-app = { path = "../cairn-app" }
cairn-contract = { path = "../cairn-contract" }
thiserror = { workspace = true }

[dev-dependencies]
cairn-infra = { path = "../cairn-infra" }
tempfile = { workspace = true }

[lints]
workspace = true
